# agent-switchboard

./: LICENSE  README.md  pyproject.toml  requirements-offline.txt
.github/workflows/: ci.yml
docs/: cutover-bundle-v1.md  design.md  foreground-task-session-stack.md  frictionless-task-close-plan.md  operations.md  phase-0-validation.md  phase-1-validation.md  phase-2-validation.md  phase-2b-plan.md  phase-3a-validation.md  phase-3b-plan.md  phase-3c-plan.md  phase-4a-plan.md  phase-4b-plan.md  phase-4c-plan.md  phase-4d-plan.md  phase-5-plan.md  phase-6-plan.md  phase-6c-acceptance.md  phase-6d-acceptance.md  phase-6e-activation.md  phase-6e1-acceptance.md  phase-6f-acceptance.md  phase-6f1-acceptance.md  phase-6f2-acceptance.md  product-landscape.md  project-management-plan.md  state-contract.md  thread-workstream-redesign-decision.md  thread-workstream-redesign-proposal.md  thread-workstream-redesign-review.md  thread-workstream-redesign-roadmap.md  usage-tracking-discovery.md  view-workflow.md
docs/archive/0.2/: README.md  frictionless-task-close-plan.md  phase-2-validation.md  phase-2b-plan.md  phase-3a-validation.md  phase-3b-plan.md  phase-4a-plan.md  phase-4b-plan.md  phase-4c-plan.md  phase-5-plan.md  product-landscape.md
docs/archive/0.3/: README.md  phase-6e-activation-retrospective.md
docs/spikes/: codex-native-rollover.md  execution-intent-timing.md  external-memory-continuity.md  managed-worktree-ownership.md  navigator-running-fork.md  rollover-trust-history.md
scripts/: build_offline_bundle.py  live_claude_smoke.py  live_codex_smoke.py  phase6e_cutover.py  verify_distributions.py
spikes/: README.md  __init__.py  claude-hooks.block-prompt.settings.json  claude-hooks.settings.json  claude_agents_probe.py  codex_app_server_probe.py  codex_prestart_name_probe.py  codex_thread_name_probe.py  hook_capture.py  sqlite_reservation_spike.py  tmux_gate_spike.py  tmux_sidebar_swap_spike.py
spikes/thread_workstream/: __init__.py  adoption.py  codex_app_server.py  codex_rollover.py  evidence.py  execution_trigger.py  execution_trigger_study.py  hook_recorder.py  input_fence.py  isolation.py  memory_continuity.py  memory_study.py  navigator.py  navigator_display.py  navigator_fork_study.py  running_fork_study.py  thread_actions.py  trigger_hook.py  trust_history.py  worktree_study.py  worktrees.py
src/agent_switchboard/: __init__.py  agent_tools.py  catalog.py  catalog_management.py  cli.py  config.py  curation.py  doctor.py  domain.py  executable.py  hook_config.py  hooks.py  live.py  local.py  local_events.py  mcp_server.py  memory.py  paths.py  presentation.py  protocol.py  reconcile.py  remote.py  repository_discovery.py  session_actions.py  snapshot.py  state.py  storage.py  task_actions.py  tmux.py  tui.py  tui_gateway.py  tui_model.py  tui_projects.py
src/agent_switchboard/_v3/: __init__.py  __main__.py  agent_mcp.py  cli.py  codex_app_server.py  config.py  cutover.py  domain.py  generation.py  hook_config.py  legacy_v2.py  navigator.py  process.py  protocol.py  provider_runtime.py  remote.py  storage.py  terminal_entry.py  tmux_view.py  trusted_hook.py  views.py  workflow.py
src/agent_switchboard/migrations/: __init__.py  v0001_initial.py  v0002_remote_cache.py  v0003_name_provenance_runtime_index.py  v0008_tasks.py  (+6 more)
tests/: test_agent_tools.py  test_catalog.py  test_catalog_management.py  test_claude_hooks.py  test_claude_lifecycle.py  test_claude_provider.py  test_cli.py  test_codex_provider.py  test_config.py  test_curation.py  test_domain.py  test_executable.py  test_hook_management.py  test_hooks.py  test_launch.py  test_live.py  test_live_claude_smoke.py  test_live_codex_smoke.py  test_mcp_server.py  test_memory.py  test_migrations.py  test_package.py  test_paths.py  test_presentation.py  test_protocol.py  test_reconcile.py  test_reconcile_storage.py  test_remote.py  test_repository_discovery.py  test_session_actions.py  test_snapshot.py  test_state.py  test_storage.py  test_task_actions.py  test_tmux.py  test_tui.py  test_tui_gateway.py  test_tui_model.py  test_v3_agent_mcp.py  test_v3_cli.py  (+16 more)
tests/fakes/: __init__.py  fake_claude.py  fake_codex.py
(+30 files in other folders)
