[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "agent-switchboard"
version = "0.3.0"
description = "A local session router for coding agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["textual>=8.2.8,<9"]

[project.scripts]
swbctl = "agent_switchboard.cli:main"

[tool.hatch.build]
reproducible = true
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_switchboard/_v3"]

[tool.hatch.build.targets.wheel.sources]
"src/agent_switchboard/_v3" = "agent_switchboard"

[tool.hatch.build.targets.sdist]
only-include = [
  "src/agent_switchboard/_v3",
  "docs/design.md",
  "docs/state-contract.md",
  "docs/view-workflow.md",
  "docs/phase-6-plan.md",
  "docs/cutover-bundle-v1.md",
  "docs/phase-6c-acceptance.md",
  "docs/phase-6d-acceptance.md",
  "requirements-offline.txt",
  "scripts/build_offline_bundle.py",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_v3_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Phase 0 probes are retained evidence; do not churn them as package style evolves.
"spikes/*.py" = ["E501", "I001"]
# SQL constraints are kept as readable source-aligned migration literals.
"src/agent_switchboard/_v3/migrations/*.py" = ["E501"]
